Updated Netflix Analysis
Added title, introduction, key takeaways, to do

--- a/netflix_analysis.ipynb
+++ b/netflix_analysis.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Analysis of My Netflix Data**\n",
+    "\n",
+    "Netflix allows you to download your own data and I thought this would be a neat project to do. I figure I could discover some neat trends among my profile and how the data compares to the other profiles on my account. Overall, I enjoyed doing some exploratory analysis of my own data. Netflix provides a whole zip file of several folders of data. Will be curious to peer through the other folders and see if any are worth analyzing. I was disappointed genres weren't included in this CSV. I was looking forward to discover how my past and current tastes had changed, or perhaps even remained the same. \n",
+    "\n",
+    "### Key Takeaways\n",
+    "Having had my account for 13 years now, I had forgotten and was reminded of how much past data my account carried. My account was way more active in the past, due to sharing my account amongst my friends, and discovered that a lot of this data was still making a sizeable impact on the data. For example, my Xbox 360 was still the most watched device, haven't hadthat for a long time now. Also, the most watched hours we're around in the early morning hours, something carried over from my friends watching Netflix after their night shifts. I wasn't aware of Supplemental Video Type data (trailers, previews, etc) either, makes sense these would be tracked as a metric also.\n",
+    "\n",
+    "### To Do\n",
+    "- Clean the dataframe a bit and remove past data to get a clearer picture of recent viewing data\n",
+    "\n",
+    "- Overlay daily and hourly viewing data on the same plot to see daily data by the hour\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 234,
    "metadata": {},
