--- a/netflix_analysis.ipynb
+++ b/netflix_analysis.ipynb
@@ -549,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> Appears I've had 499 days worth of viewing time on my profile, about 1 1/2 years worth of time spent watching TV Shows and movies - a bit suprised by this. I've had my account for an exceptionally long time, so to put things into perspective, let's see how much time has spanned across my profile. </p>"
+    "<p> Appears I've had 499 days worth of viewing time on my profile, about 1 1/2 years worth of time spent watching TV Shows and movies - a bit suprised by this. I know I've had my account for a long time though, so to put things into perspective, let's see how much time has spanned across my profile. </p>"
    ]
   },
   {
@@ -580,7 +580,7 @@
     }
    ],
    "source": [
-    "# See how much time has spanned across my profile\n",
+    "# Use sort_values() to see the range of time on my profile\n",
     "df.loc[df['Profile Name']=='Myself','Start Time'].sort_values()"
    ]
   },
@@ -590,7 +590,7 @@
    "source": [
     "<p> My profile dates back 13 years ago till 2010. When looking at it through that lens, the total viewing time on my profile seems less drastic across more than a decade of time. </p>\n",
     "\n",
-    "<p> Next, let's plot total viewing time across all profiles. To do so, we'll need to create a dictionary to store each profile's viewing time in. We'll also need to convert the dtype of Duration. Matplotlib cannot natively plot the dtype timedelta and requires a singular integer value, so we'll convert Duration to seconds using astype() </p>"
+    "<p> Next, let's plot total viewing time across all profiles. To do so, we'll need to create a dictionary to store each profile's viewing time in. We'll also need to convert the dtype of Duration. Matplotlib cannot natively plot the dtype timedelta and requires a singular integer value, so we'll convert Duration to minutes using astype() </p>"
    ]
   },
   {
@@ -653,9 +653,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> I think a better way to visualize the data is to see the average viewing time per interaction. If a user tends to watch more in one sitting, they'll have less interactions, but a higher overall average time per each view - vice versa with someone who tends to watch less per view (i.e. a couple episode) with more total interactions. </p>\n",
+    "<p> I think a better way to visualize the data is to see the average viewing time per interaction. If a user tends to watch more in one sitting, they'll have less interactions, but a higher overall average time per each view - vice versa with someone who tends to watch less per view (i.e. several TV episodes) with more total interactions. </p>\n",
     "\n",
-    "<p> Using the totals of individual profile interactions from earlier, let's divide Duration by total interactions to get an average viewing time for each user. There's a big drop in interactions after my Mom's profile, so for the sake of visualizing the date I'll stick to the top 3.</p>"
+    "<p> Using the totals of individual profile interactions from earlier, let's divide Duration by total interactions to get an average viewing time for each user. There's a big drop in interactions after my Mom's profile, so for the sake comparison, I'll stick to the top 3 profiles with most interactions. </p>"
    ]
   },
   {
@@ -880,7 +880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> To get a count of viewings, not including Supplemental, we'll need to filter out null values. </p>"
+    "<p> To get a count of viewings, not including Supplemental, we'll need to filter out null values from this column. Another option would be to drop all rows with a Duration of less than 15 seconds or so. </p>"
    ]
   },
   {
@@ -906,7 +906,14 @@
    ],
    "source": [
     "# Use isnull() to filter out null values\n",
-    "df['Profile Name'].loc[df['Supplemental Video Type'].isnull()].value_counts()\n"
+    "df['Profile Name'].loc[df['Supplemental Video Type'].isnull()].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Now that we have total interactions, without Supplemental, let's divide Duration again by these values. The difference without Supplemental wasn't a lot, so I'm not expecting a huge increase, but at least now we know it's a more true average viewing time. "
    ]
   },
   {
@@ -1221,7 +1228,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> Pandas by default sorts data in descending order. Not typically an issue, but our data is describing days, so it makes more sense to visualize the data in order by day of the week (Monday-Sunday). To do this, we'll use pd.Categorical to create categories from the days and sort them in numerical order. Then we'll do the same for hourly data </p>"
+    "<p> Pandas by default sorts data in descending order. Not typically an issue, but our data is describing days, so it makes more sense to visualize the data in order by day of the week (Monday-Sunday). To do this, we'll use pd.Categorical to create categories from the days and sort them in numerical order. Then we'll do the same for hourly data </p>\n",
+    "\n",
+    "<p> For the small amount of data I'm working with here, using categories wasn't exactly necessary, it's just a bit more efficient. For larger data sets, the difference is more noticeable. </p>"
    ]
   },
   {
@@ -1291,7 +1300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> There's only a marginal difference, but it seems on week days I watched more Netflix. This was kind of expected, on those days I'm spending more time at home watching TV </p>"
+    "<p> There's only a marginal difference, but it seems on week days I watched more Netflix. This was kind of expected, on those days I'm spending more time at home watching TV. </p>"
    ]
   },
   {
