--- a/airbnb_analysis.ipynb
+++ b/airbnb_analysis.ipynb
@@ -9,22 +9,18 @@
       "source": [
         "# **Analysing New York City Airbnb Data**\n",
         "\n",
-        "AirBnB is considered one of the biggest hotel chains in the world and it does not own a single hotel room!\n",
+        "Airbnb has already hosted over 300 million guests and aims to reach 1 billion by the time it turns 20, in 2028.\n",
         "\n",
-        "The company became successful by connecting travelers who need a place to stay with the so-called hosts, people who are willing to rent their places. In the Airbnb platform, it is possible to book everything from a shared room in a house with other people to an entire apartment or hotel room.\n",
-        "\n",
-        "Founded in 2008, Airbnb has already hosted over 300 million guests and aims to reach 1 billion by the time it turns 20, in 2028.\n",
-        "\n",
-        "The company also makes a lot of its data available for free. Through the Inside AirBnB website, anyone can have access to a great amount of information about Airbnb operation in the most important cities in the world.\n",
+        "The company also makes a lot of its data available for free through the Inside AirBnB website, anyone can have access to a great amount of information about Airbnb's operations.\n",
         "\n",
         "In this project, we will work with a dataset of New York City properties advertised on the platform. This dataset contains information about the prices, locations, reviews, room types, hosts, and more for over 50,000 rooms.\n",
         "\n",
         "Our goal is to take some insights from the data, such as the most common room types, locations, and how the prices vary depending on the room type and the location of the property.\n",
         "\n",
-        "To accomplish this goal, we'll need to go through the following steps:\n",
-        "* Getting and exploring the data;\n",
-        "* Cleaning the data;\n",
-        "* Analyzing the data."
+        "To accomplish this goal, we'll need to:\n",
+        "* Retrieve and explore the data\n",
+        "* Clean the data\n",
+        "* Analyze the data"
       ]
     },
     {
@@ -36,9 +32,7 @@
       "source": [
         "## **New York City**\n",
         "\n",
-        "New York City is the most populous city in the United States, with over eight million inhabitants, and it is the center of the largest metropolitan area in the world by urban landmass, the New York metropolitan area. Considered the cultural, financial, and media capital of the world, New York is the home of the United Nations Headquarters. The city is composed of five boroughs: Brooklyn, Queens, Manhattan, the Bronx, and Staten Island.\n",
-        "\n",
-        "With numerous famous attractions, such as Central Park, Times Square, the Brooklyn Bridge, and the Empire State Building, New York receives over sixty million visitors every year which generated an all-time high $61.3 billion in overall economic impact for New York City in 2014. Such numbers make New York City a huge Airbnb hub and a great topic for our analysis."
+        "New York City is the most populous city in the United States, with over eight million inhabitants. New York City receives over 60 million annual vistors - such numbers make New York City a huge Airbnb hub and a great topic for our analysis."
       ]
     },
     {
@@ -52,9 +46,9 @@
         "\n",
         "We'll begin by importing:\n",
         "\n",
-        "* `pandas` for data manipulation;\n",
-        "* `seaborn` and `matplotlib` for data visualization;\n",
-        "* `folium` to deal with geographical data.\n"
+        "* `pandas` for data manipulation\n",
+        "* `seaborn` and `matplotlib` for data visualization\n",
+        "* `folium` to deal with geographical data\n"
       ]
     },
     {
@@ -410,7 +404,7 @@
         "id": "u67sPLBwuWd_"
       },
       "source": [
-        "Good news! Only the `last_review` and `reviews_per_month` columns contain a significant amount of null values. As both of these columns are not the focus of our analysis, this will not be a problem. Later in this project, we will drop them.\n",
+        "Only the `last_review` and `reviews_per_month` columns contain a significant amount of null values. Both of these columns are not the focus of our analysis and thus will not be a problem. We'll drop them later on.\n",
         "\n",
         "The `name` and `host_name` columns also contain null values, but this also will not affect our project since we are not performing any analysis on them. Also, the number of null values is irrelevant."
       ]
@@ -465,7 +459,7 @@
         "id": "lQvw2V8x065X"
       },
       "source": [
-        "Looking at the histograms, we can notice that some important variables like `price` and `minimum_nights` our poorly distributed. In order to better identify these problems, let's see more statistics about the dataset using the `describe` method."
+        "Looking at the histograms, we can notice that some important variables like `price` and `minimum_nights` our poorly distributed. In order to better identify these problems, let's see more statistics about the dataset using `describe`."
       ]
     },
     {
@@ -638,7 +632,7 @@
         "\n",
         "We'll plot boxplots for each of these columns so we can take a closer look at their distribution.\n",
         "\n",
-        "Also, let's see how many and what percentages of prices are equal to \\$0 and over $500.00 and the percentages of minimum nights that are over 30 nights."
+        "Let's see how many and what percentages of prices are equal to \\$0 and over $500.00 and the percentages of minimum nights that are over 30 nights."
       ]
     },
     {
@@ -759,7 +753,7 @@
         "\n",
         "After we create the new dataframe, we'll drop the `reviews_per_month` and `last_review` columns as we said earlier in the project.\n",
         "\n",
-        "Finally, let's see if the histograms look better."
+        "Let's see if the histograms look better."
       ]
     },
     {
@@ -1143,7 +1137,7 @@
         "\n",
         "Other than that, it is reasonable to think that entire apartments are more expensive than private rooms and that private rooms are more expensive than shared rooms.\n",
         "\n",
-        "Now, let's take look in the average minimum nights for each room type."
+        "Let's take look in the average minimum nights for each room type."
       ]
     },
     {
@@ -1285,9 +1279,9 @@
         "id": "YbhIKkR6TcMp"
       },
       "source": [
-        "Manhattan is considerably more expensive than the rest of the city, which makes perfect sense since it is the richest and the most densely populated part of New York.\n",
+        "Manhattan is considerably more expensive than the rest of the city, makes sense since it is the richest and the most densely populated part of New York.\n",
         "\n",
-        "Finally, let's see how many rooms are available in each region."
+        "Let's see how many rooms are available in each region."
       ]
     },
     {
@@ -1424,13 +1418,13 @@
         "id": "CMJXhx816MNl"
       },
       "source": [
-        "But it is not easy to see the city in charts like these. In this specific case, as New York is one of the most famous cities in the world, we can see some patterns. For example, we can identify the island of Manhattan and we can see Central Park, the white square in the middle of the island. \n",
+        "It is not easy to see the city in charts like these. In this specific case, as New York is one of the most famous cities in the world, we can see some patterns. For example, we can identify the island of Manhattan and we can see Central Park, the white square in the middle of the island. \n",
         "\n",
         "With this in mind, it is easier to see that the prices in Lower Manhattan are higher than most of the other regions on the map. The region around the Brooklyn Bridge presents some higher values and we can see some very high values on the east side of Queens too.\n",
         "\n",
         "We can have a general idea of what is going on mostly because we are familiar with the city's geography. If that was not the case, it would've been harder to take any insights from this plot.\n",
         "\n",
-        "To improve this visualization and plot a real map, we'll work with `folium` from now on."
+        "To improve this visualization and plot a real map, we'll work with `folium` library instead."
       ]
     },
     {
@@ -1444,7 +1438,7 @@
         "\n",
         "Folium is a library that makes it easy to visualize data that’s been manipulated in Python on an interactive leaflet map. \n",
         "\n",
-        "In order to use Folium, though, we need the ZIP codes instead of latitude and longitude and the dataset we are using does not have a ZIP column. We'll use another dataset from Airbnb to accomplish this. This dataset is also available on Inside Airbnb.\n"
+        "In order to use Folium, we'll need the ZIP codes instead of latitude and longitude and the dataset we are using does not have a ZIP column. We'll use another dataset from Airbnb to accomplish this. This dataset is also available on Inside Airbnb.\n"
       ]
     },
     {
@@ -2123,9 +2117,9 @@
         "id": "NYqq6tlzFgmf"
       },
       "source": [
-        "And now let's merge it into our other dataframe. \n",
+        "Let's merge it into our other dataframe. \n",
         "\n",
-        "From now on we'll only use the `merged` dataframe. Let's also see some information about it."
+        "From now on we'll only use the `merged` dataframe. Let's see some information about it."
       ]
     },
     {
@@ -2435,9 +2429,7 @@
         "id": "q268jARNInRW"
       },
       "source": [
-        "Almost there!\n",
-        "\n",
-        "Notice that there's an empty value ' '. This is a problem. We need to see if there are many values like this in the dataset to decide how to proceed. Let's check this.\n"
+        "Notice there's an empty value ' '. This is a problem. We need to see if there are many values like this in the dataset to decide how to proceed. Let's check it out\n"
       ]
     },
     {
@@ -2539,9 +2531,7 @@
         "id": "4lnfymy1JhUq"
       },
       "source": [
-        "Only one empty value, that's good!\n",
-        "\n",
-        "Let's drop this row and see how many rows we have left."
+        "Only one empty value - let's drop this row and see how many rows we have left."
       ]
     },
     {
@@ -2583,10 +2573,7 @@
         "id": "UPOD29FoJ5Cn"
       },
       "source": [
-        "All set!\n",
-        "\n",
-        "We have 47,926 rows left in our completely clean dataset!\n",
-        "\n"
+        "We have 47,926 rows left in our completely clean dataset!"
       ]
     },
     {
@@ -2598,13 +2585,13 @@
       "source": [
         "#### **Plotting the Map with Folium**\n",
         "\n",
-        "Finally, we'll plot the map. To do this, we'll follow these five steps:\n",
+        "Finally, we'll plot the map. To do this, we'll follow these steps:\n",
         "\n",
-        "* Create a figure;\n",
-        "* Create the map;\n",
-        "* Create the Choropleth layer;\n",
-        "* Create some markers on the map pointing to some famous New York attractions;\n",
-        "* Display the map."
+        "* Create a figure\n",
+        "* Create the map\n",
+        "* Create the Choropleth layer\n",
+        "* Create some markers on the map pointing to some famous New York attractions\n",
+        "* Display the map"
       ]
     },
     {
@@ -2740,7 +2727,7 @@
       "source": [
         "## **Conclusion**\n",
         "\n",
-        "During the project, we performed some interesting analysis of the New York City Airbnb data and managed to answer some questions, such as:\n",
+        "We performed some analysis of the New York City Airbnb data and managed to answer some questions, such as:\n",
         "\n",
         "* What kind of room is more common in New York City Airbnb?\n",
         "* What is the price difference between different types of rooms?\n",
@@ -2748,15 +2735,14 @@
         "\n",
         "We could also see how to use Python to go from a text file to a complete interactive map.\n",
         "\n",
-        "To accomplish such goals, we went through major data manipulation steps, such as exploring, cleaning, analyzing, and visualizing data.\n",
+        "To accomplish this, we went through data manipulation steps like exploring, cleaning, analyzing, and visualizing data.\n",
         "\n",
+        "From this exploratory analysis, the conclusions are:\n",
         "\n",
-        "With all that said, the conclusions are:\n",
-        "\n",
-        "* Private rooms and entire apartments are the most common room types;\n",
-        "* Hotel rooms and entire apartments are usually more expensive than private and shared rooms;\n",
-        "* Over 80% of the rooms are located in Manhattan and Brooklyn, which are also the most expensive regions;\n",
-        "* Yes, if you want to stay close to the major attractions of the city you'll probably expend more money."
+        "* Private rooms and entire apartments are the most common room types\n",
+        "* Hotel rooms and entire apartments are usually more expensive than private and shared rooms\n",
+        "* Over 80% of the rooms are located in Manhattan and Brooklyn, which are also the most expensive regions\n",
+        "* If you want to stay close to the major attractions of the city you'll probably expend more money"
       ]
     }
   ],
