--- a/netflix_analysis.ipynb
+++ b/netflix_analysis.ipynb
@@ -25,8 +25,6 @@
     "import pandas as pd\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
     "\n",
     "df = pd.read_csv('../Netflix Analysis/Data/CONTENT_INTERACTION/ViewingActivity.csv')"
    ]
@@ -711,7 +709,6 @@
    "source": [
     "top10 = df.groupby(['Film Title'])['Duration'].sum().nlargest(10)\n",
     "\n",
-    "# Create a table with Matplotlib\n",
     "fig, ax = plt.subplots(figsize=(8, 4))\n",
     "ax.axis('off')  # Hide axes\n",
     "\n",
@@ -732,7 +729,7 @@
     "         cellLoc='left',\n",
     "         loc='center')\n",
     "\n",
-    "# Set plot title\n",
+    "# Set title\n",
     "plt.title(\"Top 10 Series\", fontsize=16)\n",
     "\n",
     "# Adjust layout\n",
@@ -983,7 +980,7 @@
     "             startangle=90  # Start angle for the first wedge (optional)\n",
     "             )\n",
     "\n",
-    "# Set the title\n",
+    "# Set title\n",
     "plt.title('A Week of Watching Netflix', fontsize=16)\n",
     "\n",
     "# Adjust layout\n",
@@ -1092,28 +1089,23 @@
     }
    ],
    "source": [
-    "# Assuming 'df' is your DataFrame\n",
     "df_myself = df.loc[df['Profile Name'] == 'Myself']\n",
     "\n",
     "# A line chart that showcases Netflix behavior through the years.\n",
     "year_clustered = df_myself.groupby('Year').sum(numeric_only=True).reset_index()\n",
     "\n",
-    "# Create a line chart with Matplotlib\n",
     "fig, ax = plt.subplots(figsize=(10, 4))\n",
     "ax.plot(year_clustered['Year'], year_clustered['Duration in Hours'],\n",
     "        color='mediumblue', linewidth=2)\n",
     "\n",
-    "# Set the title\n",
     "plt.title('My Netflix Watching Over the Years', fontsize=16)\n",
     "\n",
     "# Set axis labels\n",
     "plt.xlabel('Year')\n",
     "plt.ylabel('Duration in Hours')\n",
     "\n",
-    "# Set plot background color\n",
     "ax.set_facecolor('#FBF9F9')\n",
     "\n",
-    "# Show the plot\n",
     "plt.show()"
    ]
   },
@@ -1182,14 +1174,11 @@
     "ax.plot(days_clustered['Weekday'], days_clustered['Duration in Hours'],\n",
     "        color='mediumblue', linewidth=2)\n",
     "\n",
-    "# Set the title\n",
     "plt.title('My Netflix Watching by Days of the Week', fontsize=16)\n",
     "\n",
-    "# Set axis labels\n",
     "plt.xlabel('Day of the Week')\n",
     "plt.ylabel('Duration in Hours')\n",
     "\n",
-    "# Set plot background color\n",
     "ax.set_facecolor('#FBF9F9')\n",
     "\n",
     "plt.show()"
@@ -1231,14 +1220,11 @@
     "ax.plot(hours_clustered['Hour'], hours_clustered['Duration in Hours'],\n",
     "        color='mediumblue', linewidth=2)\n",
     "\n",
-    "# Set the title\n",
     "plt.title('My Netflix Watching by the Hour', fontsize=16)\n",
     "\n",
-    "# Set axis labels\n",
     "plt.xlabel('Hour of the Day')\n",
     "plt.ylabel('Duration in Hours')\n",
     "\n",
-    "# Set plot background color\n",
     "ax.set_facecolor('#FBF9F9')\n",
     "\n",
     "plt.show()"
@@ -1374,6 +1360,19 @@
     "df_myself['Device Type'].value_counts().plot(kind='bar',fontsize=8,figsize=(10,8))\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "<p> Many of the otucomes I had already expected, but it was exciting to see the few surprises that had resulted from the data. After all these years, I didn't think my friend's time spent watching Malcom in the Middle was still going to rank #1 most watched, that's some dedication. Also didn't expect my old Xbox 360 to still be one of the most watched devices after having been rid of for several years now - this device was unique to me and is why I didn't expect so much viewing time to come from it. </p>\n",
+    "\n",
+    "<p> If I we're to dig further and include additional analysis, I would create a new datafame and solely focus on the years from 2018 - Present. The years prior had a substantial amount of viewing time that was spread amongst a variety of friends and skewed the data in viewing time and content watched. If I we're to be only interested in my own personal viewing habits, I'd need to get rid of the data in those pre-2018 years to get a more accurate portral. </p>\n",
+    "\n",
+    "<p> I was let down that Netflix didn't supply the genres in the viewing data. Another nice addition to this analysis would've been to analyze genres among profiles and perhaps directors or actors as well. From some quick research, it appears I may be able to retrieve this data from RottenTomatoes or IMDB APIs - that'll be saved for a later verion update. All in all, this was a fun project to work on. <p>"
    ]
   }
  ],
