--- a/reso_field_usage.ipynb
+++ b/reso_field_usage.ipynb
@@ -4,16 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **RESO Field Usage Statistics**\n",
+    "## RESO Field Usage Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> This personal project began with the purpose in mind to scrape and find any potential business insights to improve data strategies. I had noticed each field page contained usage statistics at the bottom showing percentages of how many MLS systems and organizations used these fields. This sparked the idea of gathering these statistics for each field and analyzing on them to see if there we're any areas of improvements or unnoticed fields that we're used more than had thought. </p>\n",
     "\n",
-    "<p> I was curious to extra usage trends of fields using the aggregated statistics on the RESO Dictionary website. Each RESO field is a separate page and contains a Usage section at the bottom with percentages of how much each field is used across the industry - they're separated by usage of Systems and Organizations. In order to extract this data, I'd need to aggregate all the links for the RESO field pages and then extract the percentages from the Usage section of each page. <p>\n",
-    "\n",
-    "<p> The pages are dynamically generated HTML and that provides some issues when scraping the site to retrieve the list of all the page links. I'd also like to include which Group the field belongs to, current issue is that some fields do not belong to a Group and the script returns an error when attempting to extract that HTML element. The script works properly as it currenly is, however there are some improvements (included below) that I have in mind to better scrape the data. Will upload these in later versions <p>\n",
-    "\n",
-    "### To Do\n",
-    "- Include some wait and timeouts. Script doesn't retrieve all the links every time, I think this is due to not enough time to load the HTML content successfully. \n",
-    "- Add ability to retrieve the Group for each field and give an Unassigned Group name to those fields causing issues that don't have a group. \n",
-    "- Update code to traverse the page tree on the side to extract all the links from all resources. Page tree is dynamically generated and will likely need a large overhaul to the code"
+    "<p> The current version of this scraper was to first retrieve all the statistics associated to fields found in the Property resource, as these are the most important. Next version will include features to extract the stats on fields found in the other resources (Member, Office, OpenHouse, etc). In order to do this though, I'll need to revamp the whole scraper itself. These fields are all found within the side page tree and require different code to go through, expand all the dropdowns, retrieve the data. Some timeouts will be required to give it time to load the dynamic code each time, as well </p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Needed to use both BeautifulSoup and Selenium for this web scraper. Turns out, the links we're buried within dynamically loaded JavaScript, a limitation that Beautiful Soup has is it can't access dynamic data, whereas Selenium can. </p>"
    ]
   },
   {
@@ -27,29 +41,54 @@
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
-    "import time\n",
-    "\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initial setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Used the headless argument to open chrome in the background while its scraping. Initialized the dataframe, a later feature is to add which Group a field is a part of. Some fields don't contain a Group, so the scraper halts when attempting to retrieve the HTML code for these fields. I have a couple ideas in mind, just need to do some testing. </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "options = webdriver.ChromeOptions()\n",
     "options.add_argument(\"--headless=new\")\n",
     "\n",
     "driver = webdriver.Chrome(options=options)\n",
     "\n",
-    "df = pd.DataFrame(columns = ['Field', 'System Usage (%)', 'Org Usage (%)', 'Resource'])\n",
-    "# df = pd.DataFrame(columns = ['Field', 'System Usage (%)', 'Org Usage (%)', 'Resource', 'Group'])\n",
-    "\n",
     "# Open the URL\n",
     "url = 'https://ddwiki.reso.org/display/DDW17/Property+Resource'\n",
     "driver.get(url)\n",
     "\n",
-    "# identify elements with tagname <a>\n",
-    "links = driver.find_elements(By.TAG_NAME, \"a\")\n",
-    "\n",
-    "all_href = []\n",
-    "\n",
-    "# traverse list\n",
-    "for lnk in links:\n",
-    "   # get_attribute() to get all href\n",
-    "   all_href.append(lnk.get_attribute('href'))"
+    "df = pd.DataFrame(columns = ['Field', 'System Usage (%)', 'Org Usage (%)', 'Resource'])\n",
+    "# df = pd.DataFrame(columns = ['Field', 'System Usage (%)', 'Org Usage (%)', 'Resource', 'Group'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve links"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> The links are href links found within the HTML \"a\" tag and will need to retrieve all these tags in one array. Using get_attribute, I'll then loop through the array of tags, retrieve the href links, and store those in an array. There's plenty of other unwanted links it also retrieves - the ones we're looking for are only the field links, these always contain the word \"field\" (i.e. BusinessName+Field). Used list comprension to loop through the links, trim off some unnecessary link extensions, and only kept the links containing \"+Field\". </p>"
    ]
   },
   {
@@ -66,10 +105,34 @@
     }
    ],
    "source": [
+    "# identify elements with tagname <a>\n",
+    "links = driver.find_elements(By.TAG_NAME, \"a\")\n",
+    "\n",
+    "all_href = []\n",
+    "\n",
+    "# traverse list\n",
+    "for lnk in links:\n",
+    "   # get_attribute() to get all href\n",
+    "   all_href.append(lnk.get_attribute('href'))\n",
+    "\n",
     "split_links = [i.split('?', 1)[0] for i in all_href]\n",
     "field_links = [j for j in split_links if '+Field' in j]\n",
     "\n",
     "print(field_links)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve usage statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Now that we're dealing with static code, we can use Beautiful Soup. The usuage statistics are located within the div container \"innerCell\", so I'll first retrieve the HTML code found in there. The statistics are attached to ordered list \"ol\" tags and buried in the \"title\" tag, so I'll use find and find_all to retrieve the HTML data with \"title\" tags and then get all the \"ol\" tags found wthin. Now that we have this data, the stats are attached to \"li\" tags (bullet points) within the \"a\" tag, so I'll need to loop the array \"ol\" tags and strip away the text on the \"a\". The \"a\" tag contains both bulllet points so I'll need to loop through again to strip the text for each \"li\" tag to separate the text. </p>"
    ]
   },
   {
@@ -112,45 +175,55 @@
     }
    ],
    "source": [
-    "for lnk in field_links:\n",
-    "    page = requests.get(lnk)\n",
-    "    soup = BeautifulSoup(page.text, 'html')\n",
-    "    inner_cell_elements = soup.find_all('div', class_='innerCell')\n",
+    "def get_stats(links):\n",
+    "    for lnk in links:\n",
+    "        page = requests.get(lnk)\n",
+    "        soup = BeautifulSoup(page.text, 'html')\n",
+    "        inner_cell_elements = soup.find_all('div', class_='innerCell')\n",
     "\n",
-    "    field_name = soup.find('title').text.strip().split(' ')[0]\n",
+    "        field_name = soup.find('title').text.strip().split(' ')[0]\n",
     "\n",
-    "    crumbs = soup.find_all('ol', id='breadcrumbs')\n",
+    "        crumbs = soup.find_all('ol', id='breadcrumbs')\n",
     "\n",
-    "    for a in crumbs:\n",
-    "        a_tag = a.find_all('a')\n",
-    "        a_text = [txt.text.strip() for txt in a_tag]\n",
+    "        for a in crumbs:\n",
+    "            a_tag = a.find_all('a')\n",
+    "            a_text = [txt.text.strip() for txt in a_tag]\n",
     "\n",
-    "    if len(a_text) < 3:\n",
-    "        a_text.insert(3, 'null')\n",
+    "        if len(a_text) < 3:\n",
+    "            a_text.insert(3, 'null')\n",
     "\n",
-    "    for li in inner_cell_elements[6:7]:\n",
-    "        li_tag = li.find_all('li')\n",
-    "        li_text = [data.text.strip() for data in li_tag[0:2]]\n",
+    "        for li in inner_cell_elements[6:7]:\n",
+    "            li_tag = li.find_all('li')\n",
+    "            li_text = [data.text.strip() for data in li_tag[0:2]]\n",
     "\n",
-    "    df.loc[len(df.index)] = [field_name, li_text[0], li_text[1], a_text[2]]\n",
+    "        # df['Field'] = field_name\n",
+    "        # df[['System Usage (%)','Org Usage (%)']] = [(li_text[0],li_text[1])]\n",
+    "        # df['Resource'] = a_text[2].replace(' Resource','')\n",
+    "        # df['Group'] = a_text[3].replace(' Group','')\n",
+    "        df.loc[len(df.index)] = [field_name, li_text[0], li_text[1], a_text[2]]\n",
     "\n",
-    "print(df)"
+    "    print(df)\n",
+    "\n",
+    "get_stats(field_links)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df['Resource'].replace(' Resource','', regex=True, inplace=True)\n",
-    "df.replace({'(?<=%).*': ''}, regex=True, inplace=True)\n",
-    "df = df[~df['System Usage (%)'].str.contains(\"[a-zA-Z]\").fillna(False)]"
+    "### Clean dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Now that we have the data we need inside a dataframe, it's time to do some cleanup so we have usable data we can do analysis on. Each field contains \"Resource\", removing this text as it's not needed. I only want the percentages from the usage stats so I removed everything after the \"%\" sign and changed the data types to int now that there's only numerical data. Some fields are not used by MLS systems and these contained dashes \"--\", so I'm removing these rows by dropping everything that doesn't contain alphabetical letters. </p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,6 +241,9 @@
     }
    ],
    "source": [
+    "df['Resource'].replace(' Resource','', regex=True, inplace=True)\n",
+    "df.replace({'(?<=%).*': ''}, regex=True, inplace=True)\n",
+    "df = df[~df['System Usage (%)'].str.contains(\"[a-zA-Z]\").fillna(False)]\n",
     "df.replace({'<': ''}, regex=True, inplace=True)\n",
     "df['System Usage (%)'] = df['System Usage (%)'].str.replace('%', '')\n",
     "df['Org Usage (%)'] = df['Org Usage (%)'].str.replace('%', '')\n",
@@ -178,8 +254,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p> Dataframe is all cleaned up now, let's see what the top 10 most used fields are. </p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +381,7 @@
        "416               Latitude                94             98  Property"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,8 +393,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export to CSV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
